--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -1,10 +1,14 @@
-name: Update Feature Flags Documentation with Comparison
+name: Update Feature Flags Documentation
 
 on:
+  schedule:
+    - cron: '0 14 * * *'  # 6:00 AM PST
+    - cron: '0 2 * * *'   # 6:00 PM PST
   push:
-    branches:
-      - main
-  workflow_dispatch:
+    paths:
+      - 'FeatureFlags.tsx'  # Trigger workflow only if FeatureFlags.tsx is modified
+      
+  workflow_dispatch:  # Allow manual triggering of the workflow
 
 env:
   FEATURE_FLAGS_DOC: "FEATURE_FLAGS.md"
@@ -97,12 +101,12 @@ jobs:
           # Initialize associative arrays for release and main flags
           declare -A release_flags main_flags
           
-          # Populate arrays with release branch flags
+          # Populate release branch flags
           while IFS='=' read -r key value; do
             release_flags["$key"]="$value"
           done < release_flags.txt
 
-          # Populate arrays with main branch flags
+          # Populate main branch flags
           while IFS='=' read -r key value; do
             main_flags["$key"]="$value"
           done < main_flags.txt
@@ -121,6 +125,16 @@ jobs:
           fi
           echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
 
+          # Add Current Release Branch Flags List
+          echo "## Current Release Branch Feature Flags" >> ${{ env.FEATURE_FLAGS_DOC }}
+          echo "| Key | $release_column |" >> ${{ env.FEATURE_FLAGS_DOC }}
+          echo "|-----|-----------------|" >> ${{ env.FEATURE_FLAGS_DOC }}
+          for key in "${!release_flags[@]}"; do
+            release_value="${release_flags[$key]}"
+            echo "| $key | \`$release_value\` |" >> ${{ env.FEATURE_FLAGS_DOC }}
+          done
+          echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
+
           # Separate sections for New, Updated, Deleted flags
           echo "## Summary of Changes" >> ${{ env.FEATURE_FLAGS_DOC }}
 
@@ -135,19 +149,16 @@ jobs:
             main_value="${main_flags[$key]:-N/A}"
 
             if [[ "$main_value" == "N/A" ]]; then
-              # Key exists in release_flags but not in main_flags, so it's deleted
               deleted_changes+=("| $key | \`$release_value\` | N/A | **Deleted 🔴** |")
             elif [[ "$release_value" != "$main_value" ]]; then
-              # Key exists in both but values are different, so it's updated
               updated_changes+=("| $key | \`$release_value\` | \`$main_value\` | **Updated 🟡** |")
             fi
           done
 
-          # Process remaining keys in main_flags that weren't in release_flags
+          # Process remaining keys in main_flags
           for key in "${!main_flags[@]}"; do
             if [[ -z "${release_flags[$key]}" ]]; then
               main_value="${main_flags[$key]}"
-              # Key is new in main_flags, so it's added as New
               new_changes+=("| $key | N/A | \`$main_value\` | **New 🔵** |")
             fi
           done
@@ -182,7 +193,6 @@ jobs:
           echo "| Count | Key | $release_column | Main Value | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
           echo "|-------|-----|-----------------|------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
 
-          # Track processed keys to avoid duplicates in full table
           declare -A seen_keys
           count=1
 
@@ -220,6 +230,7 @@ jobs:
           # Display the generated FEATURE_FLAGS.md for debugging
           echo "Generated FEATURE_FLAGS.md content:"
           cat ${{ env.FEATURE_FLAGS_DOC }}
+
 
 
 
