--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Fetch all branches to ensure release branches are available
+          fetch-depth: 0
 
       - name: Identify Release Branches
         id: branch-info
@@ -51,7 +51,6 @@ jobs:
 
   extract-latest-release:
     runs-on: ubuntu-latest
-    needs: identify-branches
     if: needs.identify-branches.outputs.latest_branch
     outputs:
       latest_release_extracted: ${{ steps.extract.outputs.latest_release_extracted }}
@@ -90,7 +89,6 @@ jobs:
 
   extract-previous-release:
     runs-on: ubuntu-latest
-    needs: identify-branches
     if: needs.identify-branches.outputs.previous_branch
     outputs:
       previous_release_extracted: ${{ steps.extract.outputs.previous_release_extracted }}
@@ -162,8 +160,6 @@ jobs:
 
   generate-documentation:
     runs-on: ubuntu-latest
-    needs: [extract-main, extract-latest-release, extract-previous-release]
-    if: needs.extract-latest-release.outputs.latest_release_extracted == 'true' || needs.extract-main.outputs.main_extracted == 'true'
     steps:
       - name: Checkout for Documentation Update
         uses: actions/checkout@v4
