--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -14,8 +14,48 @@ env:
   FEATURE_FLAG_FILE: "FeatureFlags.tsx"
 
 jobs:
-  identify-branches:
+  # Step 1: Extract Feature Flags from Main Branch
+  extract-main:
     runs-on: ubuntu-latest
+    outputs:
+      main_extracted: ${{ steps.extract.outputs.main_extracted }}
+    steps:
+      - name: Checkout main branch
+        uses: actions/checkout@v4
+        with:
+          ref: main
+
+      - name: Extract Feature Flags from Main Branch
+        id: extract
+        run: |
+          if [ -f "${{ env.FEATURE_FLAG_FILE }}" ]; then
+            node -e "
+              const fs = require('fs');
+              const path = require('path');
+              const featureFlagFilePath = path.resolve(__dirname, process.env.FEATURE_FLAG_FILE);
+              const content = fs.readFileSync(featureFlagFilePath, 'utf8');
+              const match = content.match(/export const FeatureFlagMapping =\\s*{([\\s\\S]+?)}/);
+              if (!match || !match[1]) {
+                console.error('FeatureFlagMapping object not found in FeatureFlags.tsx');
+                process.exit(1);
+              }
+              const objectContent = '{' + match[1].trim() + '}';
+              const FeatureFlagMapping = eval('(' + objectContent + ')');
+              for (const [key, value] of Object.entries(FeatureFlagMapping)) {
+                console.log(\`\${key}=\${value}\`);
+              }
+            " > main_flags.txt
+            echo "main_extracted=true" >> $GITHUB_OUTPUT
+          else
+            echo "FeatureFlags.tsx not found in main branch; skipping."
+            touch main_flags.txt
+            echo "main_extracted=false" >> $GITHUB_OUTPUT
+          fi
+
+  # Step 2: Identify All Release Branches
+  identify-release-branches:
+    runs-on: ubuntu-latest
+    needs: extract-main
     outputs:
       latest_branch: ${{ steps.branch-info.outputs.latest_branch }}
       previous_branch: ${{ steps.branch-info.outputs.previous_branch }}
@@ -23,17 +63,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-depth: 0  # Fetch all branches to ensure release branches are available
 
       - name: Identify Release Branches
         id: branch-info
         run: |
-          echo "Listing all remote branches:"
-          git branch -r
-          
-          # Find all release branches sorted by date, and get the latest two
           release_branches=($(git branch -r --sort=-committerdate | grep 'origin/release/' | sed 's|origin/||'))
-          
+
           if [ ${#release_branches[@]} -eq 0 ]; then
             echo "No release branches found."
             echo "latest_branch=" >> $GITHUB_OUTPUT
@@ -49,16 +85,18 @@ jobs:
             echo "previous_branch=${release_branches[1]}" >> $GITHUB_OUTPUT
           fi
 
+  # Step 3: Extract Feature Flags from Latest Release Branch
   extract-latest-release:
     runs-on: ubuntu-latest
-    if: needs.identify-branches.outputs.latest_branch
+    needs: identify-release-branches
+    if: needs.identify-release-branches.outputs.latest_branch
     outputs:
       latest_release_extracted: ${{ steps.extract.outputs.latest_release_extracted }}
     steps:
       - name: Checkout latest release branch
         uses: actions/checkout@v4
         with:
-          ref: ${{ needs.identify-branches.outputs.latest_branch }}
+          ref: ${{ needs.identify-release-branches.outputs.latest_branch }}
 
       - name: Extract Feature Flags from Latest Release Branch
         id: extract
@@ -87,16 +125,18 @@ jobs:
             echo "latest_release_extracted=false" >> $GITHUB_OUTPUT
           fi
 
+  # Step 4: Extract Feature Flags from Previous Release Branch
   extract-previous-release:
     runs-on: ubuntu-latest
-    if: needs.identify-branches.outputs.previous_branch
+    needs: identify-release-branches
+    if: needs.identify-release-branches.outputs.previous_branch
     outputs:
       previous_release_extracted: ${{ steps.extract.outputs.previous_release_extracted }}
     steps:
       - name: Checkout previous release branch
         uses: actions/checkout@v4
         with:
-          ref: ${{ needs.identify-branches.outputs.previous_branch }}
+          ref: ${{ needs.identify-release-branches.outputs.previous_branch }}
 
       - name: Extract Feature Flags from Previous Release Branch
         id: extract
@@ -125,41 +165,10 @@ jobs:
             echo "previous_release_extracted=false" >> $GITHUB_OUTPUT
           fi
 
-  extract-main:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout main branch
-        uses: actions/checkout@v4
-        with:
-          ref: main
-
-      - name: Extract Feature Flags from Main Branch
-        id: extract
-        run: |
-          if [ -f "${{ env.FEATURE_FLAG_FILE }}" ]; then
-            node -e "
-              const fs = require('fs');
-              const path = require('path');
-              const featureFlagFilePath = path.resolve(__dirname, process.env.FEATURE_FLAG_FILE);
-              const content = fs.readFileSync(featureFlagFilePath, 'utf8');
-              const match = content.match(/export const FeatureFlagMapping =\\s*{([\\s\\S]+?)}/);
-              if (!match || !match[1]) {
-                console.error('FeatureFlagMapping object not found in FeatureFlags.tsx');
-                process.exit(1);
-              }
-              const objectContent = '{' + match[1].trim() + '}';
-              const FeatureFlagMapping = eval('(' + objectContent + ')');
-              for (const [key, value] of Object.entries(FeatureFlagMapping)) {
-                console.log(\`\${key}=\${value}\`);
-              }
-            " > main_flags.txt
-          else
-            echo "FeatureFlags.tsx not found in main branch; skipping."
-            touch main_flags.txt
-          fi
-
+  # Step 5: Generate Documentation
   generate-documentation:
     runs-on: ubuntu-latest
+    needs: [extract-main, extract-latest-release, extract-previous-release]
     steps:
       - name: Checkout for Documentation Update
         uses: actions/checkout@v4
@@ -168,10 +177,16 @@ jobs:
 
       - name: Generate Feature Flags Documentation
         run: |
-          # Initialize associative arrays
-          declare -A latest_release_flags previous_release_flags main_flags
+          # Initialize associative arrays for flags
+          declare -A main_flags latest_release_flags previous_release_flags
 
           # Load flags from extracted files if they exist
+          if [ -f main_flags.txt ]; then
+            while IFS='=' read -r key value; do
+              main_flags["$key"]="$value"
+            done < main_flags.txt
+          fi
+
           if [ -f latest_release_flags.txt ]; then
             while IFS='=' read -r key value; do
               latest_release_flags["$key"]="$value"
@@ -184,30 +199,18 @@ jobs:
             done < previous_release_flags.txt
           fi
 
-          if [ -f main_flags.txt ]; then
-            while IFS='=' read -r key value; do
-              main_flags["$key"]="$value"
-            done < main_flags.txt
-          fi
-
           # Begin Markdown content
           echo "# Feature Flags Documentation" > ${{ env.FEATURE_FLAGS_DOC }}
           echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
 
-          latest_branch="${{ needs.identify-branches.outputs.latest_branch }}"
-          previous_branch="${{ needs.identify-branches.outputs.previous_branch }}"
-
-          # If two release branches are present, compare latest with previous
+          # Case 1: Compare Latest and Previous Release Branches
           if [ -n "$latest_branch" ] && [ -n "$previous_branch" ]; then
-            echo "> **Comparison between \`$latest_branch\` and \`$previous_branch\`**" >> ${{ env.FEATURE_FLAGS_DOC }}
-            echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
+            echo "## Comparison Between Latest and Previous Release Branches" >> ${{ env.FEATURE_FLAGS_DOC }}
+            echo "| Count | Key | Latest Value ($latest_branch) | Previous Value ($previous_branch) | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
+            echo "|-------|-----|-----------------|-----------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
 
-            # Summary of changes between latest and previous release
-            echo "## Changes Between Latest and Previous Release" >> ${{ env.FEATURE_FLAGS_DOC }}
-            echo "| Key | Latest Value (\`$latest_branch\`) | Previous Value (\`$previous_branch\`) | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
-            echo "|-----|----------------|------------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
-
-            # Compare latest and previous release
+            # Compare latest with previous release flags
+            count=1
             for key in "${!latest_release_flags[@]}"; do
               latest_value="${latest_release_flags[$key]}"
               previous_value="${previous_release_flags[$key]:-N/A}"
@@ -218,98 +221,54 @@ jobs:
               else
                 status="Unchanged ⚪"
               fi
-              echo "| $key | \`$latest_value\` | \`$previous_value\` | $status |" >> ${{ env.FEATURE_FLAGS_DOC }}
+              echo "| $count | $key | \`$latest_value\` | \`$previous_value\` | $status |" >> ${{ env.FEATURE_FLAGS_DOC }}
+              ((count++))
             done
-
             for key in "${!previous_release_flags[@]}"; do
               if [[ -z "${latest_release_flags[$key]}" ]]; then
-                echo "| $key | N/A | \`${previous_release_flags[$key]}\` | Deleted 🔴 |" >> ${{ env.FEATURE_FLAGS_DOC }}
-              fi
-            done
-            echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
-          fi
-
-          # If only one release branch, compare with main branch
-          if [ -n "$latest_branch" ] && [ -z "$previous_branch" ]; then
-            echo "## Comparison of \`$latest_branch\` and \`main\` Branch" >> ${{ env.FEATURE_FLAGS_DOC }}
-            echo "| Key | Latest Release Value (\`$latest_branch\`) | Main Value | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
-            echo "|-----|-----------------|------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
-
-            # Track New, Updated, Deleted flags for a summary section
-            new_flags=()
-            updated_flags=()
-            deleted_flags=()
-
-            # Compare flags in latest release vs. main
-            for key in "${!latest_release_flags[@]}"; do
-              latest_value="${latest_release_flags[$key]}"
-              main_value="${main_flags[$key]:-N/A}"
-              if [[ "$main_value" == "N/A" ]]; then
-                new_flags+=("| $key | \`$latest_value\` | N/A | **New 🔵** |")
-              elif [[ "$latest_value" != "$main_value" ]]; then
-                updated_flags+=("| $key | \`$latest_value\` | \`$main_value\` | **Updated 🟡** |")
-              fi
-            done
-
-            # Add deleted flags
-            for key in "${!main_flags[@]}"; do
-              if [[ -z "${latest_release_flags[$key]}" ]]; then
-                deleted_flags+=("| $key | N/A | \`${main_flags[$key]}\` | **Deleted 🔴** |")
-              fi
-            done
-
-            # Output Summary of Changes
-            if [ ${#new_flags[@]} -gt 0 ]; then
-              echo "### New Flags" >> ${{ env.FEATURE_FLAGS_DOC }}
-              echo "| Key | $latest_branch Value | Main Value | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
-              echo "|-----|-----------------|------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
-              printf "%s\n" "${new_flags[@]}" >> ${{ env.FEATURE_FLAGS_DOC }}
-              echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
-            fi
-
-            if [ ${#updated_flags[@]} -gt 0 ]; then
-              echo "### Updated Flags" >> ${{ env.FEATURE_FLAGS_DOC }}
-              echo "| Key | $latest_branch Value | Main Value | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
-              echo "|-----|-----------------|------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
-              printf "%s\n" "${updated_flags[@]}" >> ${{ env.FEATURE_FLAGS_DOC }}
-              echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
-            fi
-
-            if [ ${#deleted_flags[@]} -gt 0 ]; then
-              echo "### Deleted Flags" >> ${{ env.FEATURE_FLAGS_DOC }}
-              echo "| Key | $latest_branch Value | Main Value | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
-              echo "|-----|-----------------|------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
-              printf "%s\n" "${deleted_flags[@]}" >> ${{ env.FEATURE_FLAGS_DOC }}
-              echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
-            fi
-
-            # Full Comparison Table for all flags
-            echo "## Full Feature Flags Comparison with Main Branch" >> ${{ env.FEATURE_FLAGS_DOC }}
-            echo "| Key | $latest_branch Value | Main Value | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
-            echo "|-----|-----------------|------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
-
-            for key in "${!latest_release_flags[@]}"; do
-              latest_value="${latest_release_flags[$key]}"
-              main_value="${main_flags[$key]:-N/A}"
-              status=""
-
-              if [[ "$main_value" == "N/A" ]]; then
-                status="New 🔵"
-              elif [[ "$latest_value" != "$main_value" ]]; then
-                status="Updated 🟡"
-              else
-                status="Unchanged ⚪"
-              fi
-
-              echo "| $key | \`$latest_value\` | \`$main_value\` | **$status** |" >> ${{ env.FEATURE_FLAGS_DOC }}
-            done
-
-            for key in "${!main_flags[@]}"; do
-              if [[ -z "${latest_release_flags[$key]}" ]]; then
-                echo "| $key | N/A | \`${main_flags[$key]}\` | **Deleted 🔴** |" >> ${{ env.FEATURE_FLAGS_DOC }}
+                echo "| $count | $key | N/A | \`${previous_release_flags[$key]}\` | Deleted 🔴 |" >> ${{ env.FEATURE_FLAGS_DOC }}
+                ((count++))
               fi
             done
           fi
+
+          # Case 2: Compare Latest Release with Main Branch
+          echo "## Comparison Between Latest Release and Main Branch" >> ${{ env.FEATURE_FLAGS_DOC }}
+          echo "| Count | Key | Latest Value ($latest_branch) | Main Value | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
+          echo "|-------|-----|-----------------|------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
+
+          # Compare latest release flags with main flags
+          count=1
+          for key in "${!latest_release_flags[@]}"; do
+            latest_value="${latest_release_flags[$key]}"
+            main_value="${main_flags[$key]:-N/A}"
+            if [[ "$main_value" == "N/A" ]]; then
+              status="New 🔵"
+            elif [[ "$latest_value" != "$main_value" ]]; then
+              status="Updated 🟡"
+            else
+              status="Unchanged ⚪"
+            fi
+            echo "| $count | $key | \`$latest_value\` | \`$main_value\` | $status |" >> ${{ env.FEATURE_FLAGS_DOC }}
+            ((count++))
+          done
+          for key in "${!main_flags[@]}"; do
+            if [[ -z "${latest_release_flags[$key]}" ]]; then
+              echo "| $count | $key | N/A | \`${main_flags[$key]}\` | Deleted 🔴 |" >> ${{ env.FEATURE_FLAGS_DOC }}
+              ((count++))
+            fi
+          done
+
+          # Case 3: Full Summary of Main Branch Flags
+          echo "## Full Summary of Main Branch Feature Flags" >> ${{ env.FEATURE_FLAGS_DOC }}
+          echo "| Count | Key | Main Value |" >> ${{ env.FEATURE_FLAGS_DOC }}
+          echo "|-------|-----|------------|" >> ${{ env.FEATURE_FLAGS_DOC }}
+
+          count=1
+          for key in "${!main_flags[@]}"; do
+            echo "| $count | $key | \`${main_flags[$key]}\` |" >> ${{ env.FEATURE_FLAGS_DOC }}
+            ((count++))
+          done
 
       - name: Commit and Push Changes
         run: |
